test('modules-agc', executable(
    'jetstream-modules-agc', 'agc.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)

test('modules-waterfall', executable(
    'jetstream-modules-waterfall', 'waterfall.cc',
    dependencies: [libjetstream_dep, catch2_dep],
), is_parallel: false, timeout: 0)
